objects/ccpe_r__Retainer_Line_Item__c.object
<CustomObject>
    <description>This object is used for the retainers line items that are created based on business logic such as spend and time period and are then drawn down on by the customer</description>
    <fields>
        <fullName>ccpe_r__Current_Hours__c</fullName>
        <description>The running total of how many hours the client has used in the time period</description>
        <label>Current Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Current_Spend__c</fullName>
        <description>The running total of how much spend the client has had in the time period</description>
        <label>Current Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hours_Balance_Remaining__c</fullName>
        <formula>ccpe_r__Line_Item_Total_Hours__c - ccpe_r__Current_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Balance Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hours_From_Criteria__c</fullName>
        <description>The retainer hours taken from the client account at the start of the time period</description>
        <label>Hours From Criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Line_Item_Criteria__c</fullName>
        <description>The line item criteria record this line item was generated from</description>
        <label>Line Item Criteria</label>
        <referenceTo>ccpe_r__Line_Item_Criteria__c</referenceTo>
        <relationshipLabel>Retainer Line Items</relationshipLabel>
        <relationshipName>Retainer_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Line_Item_Total_Hours__c</fullName>
        <description>The total amount of retainer hours available for the time period including any rolled over hours</description>
        <formula>ccpe_r__Hours_From_Criteria__c + ccpe_r__Rolled_Over_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Line_Item_Total_Spend__c</fullName>
        <description>The total amount of the retainer available for the time period including any rolled over amounts</description>
        <formula>ccpe_r__Spend_From_Criteria__c + ccpe_r__Rolled_Over_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Previous_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Line Item from which this was rolled over</description>
        <label>Previous Line Item</label>
        <referenceTo>ccpe_r__Retainer_Line_Item__c</referenceTo>
        <relationshipLabel>Retainer Line Items</relationshipLabel>
        <relationshipName>Retainer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Retainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The retainer that the line item is related to</description>
        <label>Retainer</label>
        <referenceTo>ccpe_r__Retainer__c</referenceTo>
        <relationshipLabel>Retainer Line Items</relationshipLabel>
        <relationshipName>Retainer_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rolled_Over_Hours__c</fullName>
        <description>The hours of retainer rolled over from the previous time period if any</description>
        <label>Rolled Over Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rolled_Over_Spend__c</fullName>
        <description>The amount of retainer rolled over from the previous time period if any</description>
        <label>Rolled Over Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Spend_Balance_Remaining__c</fullName>
        <formula>ccpe_r__Line_Item_Total_Spend__c -  ccpe_r__Current_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Balance Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Spend_From_Criteria__c</fullName>
        <description>The amount taken from the line item criteria at the start of the time period</description>
        <label>Spend From Criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Start_Date__c</fullName>
        <description>The date signifies the start date of the retainer line item record, this is recommended to be set to the first day of the week, month or quarter</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__isActive__c</fullName>
        <formula>ccpe_r__Start_Date__c &lt;= TODAY() &amp;&amp;
IF(ISPICKVAL(ccpe_r__Line_Item_Criteria__r.ccpe_r__Retainer__r.ccpe_r__Time_Period__c,&apos;Week&apos;),
   ( TODAY() &lt; (ccpe_r__Start_Date__c + 7) ),
   IF(ISPICKVAL(ccpe_r__Line_Item_Criteria__r.ccpe_r__Retainer__r.ccpe_r__Time_Period__c,&apos;Month&apos;),
      ( MONTH(ccpe_r__Start_Date__c) == MONTH(TODAY())  &amp;&amp; YEAR(ccpe_r__Start_Date__c) == Year(TODAY())),
      IF(ISPICKVAL(ccpe_r__Line_Item_Criteria__r.ccpe_r__Retainer__r.ccpe_r__Time_Period__c,&apos;Quarter&apos;),
         ( 0 &lt;= ( MONTH(TODAY()) - MONTH(ccpe_r__Start_Date__c) ) &amp;&amp; ( MONTH(TODAY()) - MONTH(ccpe_r__Start_Date__c) ) &lt; 3),
         ISPICKVAL(ccpe_r__Line_Item_Criteria__r.ccpe_r__Retainer__r.ccpe_r__Time_Period__c,&apos;One Time&apos;)
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Retainer Line Item</label>
    <nameField>
        <displayFormat>RL{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainer Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ccpe_r__Cannot_Reference_Newer_Line_Item</fullName>
        <active>true</active>
        <description>The Previous Line Item must have started at an earlier date than this Line Item</description>
        <errorConditionFormula>ccpe_r__Previous_Line_Item__r.ccpe_r__Start_Date__c &gt;= ccpe_r__Start_Date__c</errorConditionFormula>
        <errorDisplayField>ccpe_r__Previous_Line_Item__c</errorDisplayField>
        <errorMessage>Cannot reference a newer Line Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_r__Cannot_Reference_Self</fullName>
        <active>true</active>
        <description>Line Items cannot reference themselves</description>
        <errorConditionFormula>ccpe_r__Previous_Line_Item__c == Id &amp;&amp; Id != null</errorConditionFormula>
        <errorDisplayField>ccpe_r__Previous_Line_Item__c</errorDisplayField>
        <errorMessage>A Line Item cannot reference itself as the previous Line Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_r__Retainer_Must_Be_Parent_Of_Criteria</fullName>
        <active>true</active>
        <description>The referenced Retainer must be the parent of the referenced Line Item Criteria</description>
        <errorConditionFormula>ccpe_r__Retainer__c != null &amp;&amp; (ccpe_r__Retainer__c != ccpe_r__Line_Item_Criteria__r.ccpe_r__Retainer__c)</errorConditionFormula>
        <errorDisplayField>ccpe_r__Retainer__c</errorDisplayField>
        <errorMessage>Only the parent Retainer of the Line Item Criteria may be selected</errorMessage>
    </validationRules>
</CustomObject>